css/style.css
/*
0 - 600px(0 - 60rem): Phone
600 - 900px(60rem - 90rem): tablet portrait
900 - 1200px(90rem - 120rem): Tablet landscape
[1200 - 1800px(120rem - 180rem)] is where the normal css styles apply
1800px + (180rem + ): Big Desktop
*/
/*
$breakpoint argument choices:
- phone
- tab-port
- tab-land
- big-desktop

1em = 16px
*/
*,
*::after,
*::before {
  padding: 0;
  margin: 0;
  box-sizing: inherit; }

html {
  font-size: 62.5%;
  z-index: 1000;
  /*@include respond(phone){
        font-size: 50%; not required since 900 == 600px screen size
    }*/ }
  @media (max-width: 75em) {
    html {
      font-size: 56.25%; } }
  @media (max-width: 56.25em) {
    html {
      font-size: 50%; } }
  @media (min-width: 112.5em) {
    html {
      font-size: 75%; } }

body {
  box-sizing: border-box;
  padding: 3rem; }
  @media (max-width: 56.25em) {
    body {
      padding: 0; } }

a,
li {
  text-decoration: none;
  list-style: none; }

@keyframes moveInLeft {
  0% {
    opacity: 0;
    transform: translateX(-10rem); }
  80% {
    transform: translateX(1rem); }
  100% {
    opacity: 1;
    transform: translateX(0); } }

@keyframes moveInRight {
  0% {
    opacity: 0;
    transform: translateX(10rem); }
  80% {
    transform: translateX(-1rem); }
  100% {
    opacity: 1;
    transform: translateX(0); } }

@keyframes moveInTop {
  0% {
    opacity: 0;
    transform: translateY(3rem); }
  80% {
    transform: translateY(-1rem);
    opacity: 0.65; }
  100% {
    opacity: 1;
    transform: translate(0); } }

body {
  font-family: "Lato", sans-serif;
  font-weight: 400;
  line-height: 1.7;
  color: #777; }

.heading-primary {
  color: #fff;
  text-transform: uppercase;
  backface-visibility: hidden;
  margin-bottom: 6rem; }
  .heading-primary--main {
    display: block;
    font-size: 6rem;
    font-weight: 400;
    letter-spacing: 3.5rem;
    animation: moveInLeft;
    animation-duration: 1s;
    animation-timing-function: ease-out; }
    @media (max-width: 37.5em) {
      .heading-primary--main {
        letter-spacing: 0;
        font-family: 5rem; } }
  .heading-primary--sub {
    display: block;
    font-size: 2rem;
    font-weight: 700;
    letter-spacing: 1.75rem;
    animation: moveInRight;
    animation-duration: 1s;
    animation-timing-function: ease-out; }
    @media (max-width: 37.5em) {
      .heading-primary--sub {
        letter-spacing: 0; } }

.heading-secondary {
  font-size: 3.5rem;
  text-transform: uppercase;
  font-weight: 700;
  display: inline-block;
  background-image: linear-gradient(to right, #7ed56f, #28b485);
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
  letter-spacing: 0.2rem;
  transition: all .2s; }
  .heading-secondary::after {
    content: "";
    clear: both;
    display: table; }
  @media (max-width: 75em) {
    .heading-secondary {
      font-size: 3.3rem; } }
  @media (max-width: 56.25em) {
    .heading-secondary {
      font-size: 3rem; } }
  @media (max-width: 37.5em) {
    .heading-secondary {
      font-size: 2.5rem; } }
  .heading-secondary:hover {
    transform: skewY(2deg) skewX(15deg) scale(1.1);
    text-shadow: 0.5rem 1rem 2rem rgba(17, 17, 17, 0.2); }

.heading-tertiary {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 1.6rem; }

.paragraph {
  font-size: 1.6rem; }
  .paragraph:not(:last-child) {
    margin-bottom: 3rem; }

*,
*::after,
*::before {
  padding: 0;
  margin: 0;
  box-sizing: inherit; }

html {
  font-size: 62.5%;
  z-index: 1000;
  /*@include respond(phone){
        font-size: 50%; not required since 900 == 600px screen size
    }*/ }
  @media (max-width: 75em) {
    html {
      font-size: 56.25%; } }
  @media (max-width: 56.25em) {
    html {
      font-size: 50%; } }
  @media (min-width: 112.5em) {
    html {
      font-size: 75%; } }

body {
  box-sizing: border-box;
  padding: 3rem; }
  @media (max-width: 56.25em) {
    body {
      padding: 0; } }

a,
li {
  text-decoration: none;
  list-style: none; }

.u-center-text {
  text-align: center !important; }

.u-margin-bottom-small {
  margin-bottom: 1.5rem !important; }

.u-margin-bottom-medium {
  margin-bottom: 4rem !important; }
  @media (max-width: 56.25em) {
    .u-margin-bottom-medium {
      margin-bottom: 2.5rem !important; } }

.u-margin-bottom-big {
  margin-bottom: 8rem !important; }
  @media (max-width: 56.25em) {
    .u-margin-bottom-big {
      margin-bottom: 5rem !important; } }

.u-margin-top-small {
  margin-top: 1.5rem !important; }

.u-margin-top-medium {
  margin-top: 4rem !important; }
  @media (max-width: 56.25em) {
    .u-margin-top-medium {
      margin-top: 2.5rem !important; } }

.u-margin-top-big {
  margin-top: 8rem !important; }
  @media (max-width: 56.25em) {
    .u-margin-top-big {
      margin-top: 5rem !important; } }

.u-margin-top-huge {
  margin-top: 10rem !important; }
  @media (max-width: 56.25em) {
    .u-margin-top-huge {
      margin-top: 7rem !important; } }

.section-about {
  background-color: #f7f7f7;
  padding: 25rem 0;
  margin-top: -20vh; }
  @media (max-width: 75em) {
    .section-about {
      padding: 22rem 2rem; } }
  @media (max-width: 56.25em) {
    .section-about {
      padding: 20rem 0;
      margin-top: -15vh; } }
  @media (max-width: 37.5em) {
    .section-about {
      padding: 20rem 1rem;
      margin-top: -15vh; } }

.section-features {
  padding: 20rem 0;
  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/nat-4.jpg");
  background-size: cover;
  margin-top: -11rem;
  transform: skewY(-7deg); }
  .section-features > * {
    transform: skewY(7deg); }
  @media (max-width: 75em) {
    .section-features {
      padding: 14rem 1rem; } }
  @media (max-width: 56.25em) {
    .section-features {
      padding: 10rem 0; } }
  @media (max-width: 37.5em) {
    .section-features {
      padding: 10rem 1rem; } }

.section-tours {
  background-color: #f7f7f7;
  padding: 25rem 0 15rem 0;
  margin-top: -11rem; }
/* ... */

